c end temp